<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/mainLayou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp"
            android:showDividers="middle">

            <!-- TextView to display money -->
            <TextView
                android:id="@+id/tvMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/default_money_value"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="140dp" />


            <!-- TextView for user input -->
            <Button
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_logout" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mainLayout3"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal"
            android:padding="1dp"
            android:showDividers="middle">

            <TextView
                android:id="@+id/tvInputAmount"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginBottom="16dp"
                android:background="@android:drawable/editbox_background"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:hint="@string/hint_enter_amount"
                android:padding="8dp"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="Suspicious0dp" />

            <!-- Add Money Button -->
            <Button
                android:id="@+id/btnAddMoney"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_marginBottom="16dp"
                android:text="@string/label_add_money" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp" />

            <!-- Reset Button -->
            <Button
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_reset" />

            <Button
                android:id="@+id/btn_view_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/label_history" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etSearch"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/baseline_screen_search_desktop_24"
                android:drawablePadding="8dp"
                android:hint="Search"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:minHeight="50dp"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <Spinner
                android:id="@+id/spinner_sort_by"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:minHeight="50dp"
                android:padding="6dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLayout">

        <LinearLayout
            android:id="@+id/itemListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="parent">

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
